Showcase: Fix rotate UI position on mobile

--- a/widgets/showcase/src/styles/components/RideStylerShowcaseVehicleVisualization.scss
+++ b/widgets/showcase/src/styles/components/RideStylerShowcaseVehicleVisualization.scss
@@ -41,7 +41,7 @@
     background-repeat: no-repeat;
     position: absolute;
     left: 10%;
-    bottom: 15%;
+    bottom: 0%;
     right: 10%;
     margin-left: 50px;
     height: 320px;
